--- a/QLKS/QLKS.csproj
+++ b/QLKS/QLKS.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmThietBi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmThietBi.Designer.cs">
+      <DependentUpon>FrmThietBi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_DICHVU.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     </Compile>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmThietBi.resx">
+      <DependentUpon>FrmThietBi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_DICHVU.resx">
       <DependentUpon>Frm_DICHVU.cs</DependentUpon>
