--- a/QLKS/QLKS.csproj
+++ b/QLKS/QLKS.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Frm_QUANLYDATPHONG.Designer.cs">
       <DependentUpon>Frm_QUANLYDATPHONG.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_THANHTOAN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_THANHTOAN.Designer.cs">
+      <DependentUpon>Frm_THANHTOAN.cs</DependentUpon>
+    </Compile>
     <Compile Include="KetNoi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -158,6 +164,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_QUANLYDATPHONG.resx">
       <DependentUpon>Frm_QUANLYDATPHONG.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_THANHTOAN.resx">
+      <DependentUpon>Frm_THANHTOAN.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
