--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 #Ignore file KetNoi.cs
-KetNoi.cs
-Program.cs
+QLKS/KetNoi.cs
+QLKS/Program.cs
 # User-specific files
 *.rsuser
 *.suo
