--- a/QLKS/App.config
+++ b/QLKS/App.config
@@ -5,6 +5,8 @@
     <connectionStrings>
         <add name="QLKS.Properties.Settings.QLKSConnectionString" connectionString="Data Source=DESKTOP-N228TL6\SQLEXPRESS;Initial Catalog=QLKS;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="QLKS.Properties.Settings.ConnectionString" connectionString="Provider=SQLNCLI11;Data Source=DESKTOP-0LTH8BH;Integrated Security=SSPI;Initial Catalog=QLKS"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
