--- a/QLKS/QLKS.csproj
+++ b/QLKS/QLKS.csproj
@@ -136,6 +136,12 @@
     <Compile Include="Frm_KHACHHANG.Designer.cs">
       <DependentUpon>Frm_KHACHHANG.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Phong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Phong.Designer.cs">
+      <DependentUpon>Frm_Phong.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_QUANLYDATPHONG.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_KHACHHANG.resx">
       <DependentUpon>Frm_KHACHHANG.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Phong.resx">
+      <DependentUpon>Frm_Phong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_QUANLYDATPHONG.resx">
       <DependentUpon>Frm_QUANLYDATPHONG.cs</DependentUpon>
