--- a/Crystal Reports Backup Files/QLKS.csproj
+++ b/Crystal Reports Backup Files/QLKS.csproj
@@ -33,10 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -136,6 +136,12 @@
     <Compile Include="Frm_KHACHHANG.Designer.cs">
       <DependentUpon>Frm_KHACHHANG.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Phong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Phong.Designer.cs">
+      <DependentUpon>Frm_Phong.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_QUANLYDATPHONG.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_KHACHHANG.resx">
       <DependentUpon>Frm_KHACHHANG.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Phong.resx">
+      <DependentUpon>Frm_Phong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_QUANLYDATPHONG.resx">
       <DependentUpon>Frm_QUANLYDATPHONG.cs</DependentUpon>
